--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,7 +15,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.dev
-    env_file: .env    
+    env_file: .env.local    
     environment: 
       - PORT=${PORT}
       - MONGO_URL=${MONGO_URL}
